# gpx2geojson-wasm

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  package-lock.json  package.json  test.html
.github/workflows/: ci.yml
js/: index.ts  tsconfig.json  types.ts
src/: converter.rs  error.rs  gpx_types.rs  lib.rs  options.rs  parser.rs
tests/: integration_test.rs  snapshot_test.rs
tests/fixtures/basic/: 01_minimal_waypoint.gpx  02_full_waypoint.gpx  03_simple_route.gpx  04_simple_track.gpx  05_complete.gpx
tests/fixtures/edge_cases/: 09_empty.gpx  10_empty_segments.gpx  11_cdata_and_entities.gpx  12_no_namespace.gpx  13_gpx10.gpx
tests/fixtures/expected/basic/: 01_minimal_waypoint.geojson  02_full_waypoint.geojson  03_simple_route.geojson  04_simple_track.geojson  05_complete.geojson
tests/fixtures/expected/edge_cases/: 10_empty_segments.geojson  11_cdata_and_entities.geojson  12_no_namespace.geojson  13_gpx10.geojson
tests/fixtures/expected/tracks/: 06_multi_segment.geojson  06_multi_segment_joined.geojson  07_multi_track.geojson  08_single_point_track.geojson
tests/fixtures/tracks/: 06_multi_segment.gpx  07_multi_track.gpx  08_single_point_track.gpx
