[package]
name = "gpx2geojson-wasm"
version = "0.1.0"
edition = "2024"
description = "High-performance GPX to GeoJSON converter compiled to WebAssembly"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
quick-xml = "0.39"
wasm-bindgen = "0.2.108"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.6.5"
js-sys = "0.3"
geojson = "0.24"
console_error_panic_hook = "0.1"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[profile.release]
opt-level = "s"
lto = true
strip = true
codegen-units = 1
